followed documentation, setupDisplay bugged